--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;您好，我是来自中国上海的 Min，我创建的这个中文简体网站，来源于我在美国西雅图、布法罗的 ESOL 教学实践，期间我接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
+                &emsp;&emsp;您好，我是来自中国上海的 Min，我创建的这个网站，来源于我在美国西雅图、布法罗的 ESOL 教学实践，期间我接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。金钱不应该决定接受教育的机会。我们希望生活在一个每个人都能获得良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
@@ -99,7 +99,7 @@
                 <hr>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;资深导师自身具有专业水平和业务经验，能够帮助学员量身打造私教课程，重视实践指导，对学员负责，通常收费不菲。我们倡导商业化私教课程的社会责任，尽自己的能力为低收入家庭和经济困难者提供帮助。</br>
-                &emsp;&emsp;以下15门私教课程已通过我们的认证并获得奖励：</p>
+                &emsp;&emsp;以下 15 门私教课程已通过我们的认证并获得奖励：</p>
             </div>
         </div>
 
@@ -125,7 +125,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>国企集中采购岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;1.《关于规范中央企业采购管理工作的指导意见》（国资发改革规[2024]53号通知、八部委《招标投标领域公平竞争审查规则》16号令解读；</br>
+                &emsp;&emsp;1.《关于规范中央企业采购管理工作的指导意见》（国资发改革规 [2024] 53 号通知、八部委《招标投标领域公平竞争审查规则》16 号令解读；</br>
                 &emsp;&emsp;2.国有企业采购类型、采购范围及适用的采购模式；</br>
                 &emsp;&emsp;3.“管、办、监”新要求下国有企业采购管理组织架构与职责分工；</br>
                 &emsp;&emsp;4.采购组织策划及准备工作主要内容；</br>
@@ -138,7 +138,7 @@
                 &emsp;&emsp;11.生产运营类及大宗原材料采购及实施方案；</br>
                 &emsp;&emsp;12.其他咨询服务类及零星采购实施策略；</br>
                 &emsp;&emsp;13.“数字化”发展到“数智化”赋能招采的实践。</br>
-                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系 business@kb727.com 预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合在国有企业从事投资决策、招标管理、物资采购、基建工程、成本管理、纪检监察、财务审计、合同法务、供应链管理等岗位的求职与面试，请联系 business@kb727.com 预约资深专家，全部讲解需 120 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -149,7 +149,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>酒店资产购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导酒店资产收购需要关注的土地及建筑物、设备设施、监管要求、证照、法务、财务、税务、价格、投资回报、市场、地理位置、品牌、声誉、人员等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导酒店资产收购需要关注的土地及建筑物、设备设施、监管要求、证照、法务、财务、税务、价格、投资回报、市场、地理位置、品牌、声誉、人员等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需 90 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -160,7 +160,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>办公楼购置与谈判实务</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导办公楼资产收购需要关注的开发商资质、土地及建筑物、土地性质、规划面积/计容面积/实测面积、设备设施、监管要求、证照、法务、财务、税务、维修基金、付款进度与比例、区域成交均价、建安费用成本、投资回报、区位、品牌昭示、办公物业范围、地块使用及物业管理区域划分、交付标准、产权车位等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，辅导办公楼资产收购需要关注的开发商资质、土地及建筑物、土地性质、规划面积/计容面积/实测面积、设备设施、监管要求、证照、法务、财务、税务、维修基金、付款进度与比例、区域成交均价、建安费用成本、投资回报、区位、品牌昭示、办公物业范围、地块使用及物业管理区域划分、交付标准、产权车位等评估与谈判要素，适合资产收购从业人员及相关岗位求职面试，全部讲解需 90 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -187,10 +187,10 @@
                 &emsp;&emsp;✔️  境内外大中型物流仓储及其地产、基金在“投、融、管、退”各方面的重要动态信息。</br>
                 &emsp;&emsp;✔️  全国各地各级政府在重点区域的招商部署、飞地或联络处安排。</br>
                 &emsp;&emsp;✔️  全国各地上市公司、隐形富豪、暴发户在重点区域的投资布局、抄底交易。</br>
-                &emsp;&emsp;✔️  重点区域1手、1.5手、2手土地及建筑物资产求购、出售、整租、代运营信息。</br>
+                &emsp;&emsp;✔️  重点区域 1手、1.5手、2 手土地及建筑物资产求购、出售、整租、代运营信息。</br>
                 &emsp;&emsp;✔️  定期盘点“投拓 - 工程 - 运营 - 去化”关键任务，站在今后三五年的时间跨度看当前工作，谋发展，控成本，管团队，打开局面。</br>
                 &emsp;&emsp;✔️  关键节点：获客、带看、保证金、协议关键条款洽谈、签约、进场、管理、应收款、退出。</br>
-                &emsp;&emsp;✔️  通过“明确目标 - 分解任务 - 贡献资源 - 监督检查”16字工作方法，提高工作的有效性。
+                &emsp;&emsp;✔️  通过“明确目标 - 分解任务 - 贡献资源 - 监督检查” 16 字工作方法，提高工作的有效性。
                 </p>
         </div>
     </div>
@@ -213,19 +213,19 @@
                 <h3 style="text-align: left"><b>电气工程设计岗位求职面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;1.成套设备、机电工程、环境工程、水处理相关电气工程及自动化职业的现状、机会、瓶颈、前景；</br>
-                &emsp;&emsp;2.高低压配电系统设计、UPS电源供配电系统的双电源切换回路设计和UPS电源柜、电池柜设计；</br>
-                &emsp;&emsp;3.西门子、三菱、AB PLC硬件和软件编程；</br>
-                &emsp;&emsp;4.西门子WINCC和触摸屏画面组态；</br>
+                &emsp;&emsp;2.高低压配电系统设计、UPS 电源供配电系统的双电源切换回路设计和 UPS 电源柜、电池柜设计；</br>
+                &emsp;&emsp;3.西门子、三菱、AB PLC 硬件和软件编程；</br>
+                &emsp;&emsp;4.西门子 WINCC 和触摸屏画面组态；</br>
                 &emsp;&emsp;5.水泵供排水控制要求；</br>
                 &emsp;&emsp;6.空压机工作原理；</br>
                 &emsp;&emsp;7.厂区视频监控系统；</br>
-                &emsp;&emsp;8.伊顿UPS电源配置和系统配置；</br>
+                &emsp;&emsp;8.伊顿 UPS 电源配置和系统配置；</br>
                 &emsp;&emsp;9.根据设备清单和仪表清单进行电气和仪控图纸设计，绘制电气二次原理图-柜子接线图-端子图，绘制仪控二次原理图-柜子接线图-端子图，绘制控制逻辑图；</br>
                 &emsp;&emsp;10.现场施工按照指导与监督、现场图纸沟通和工艺调试；</br>
                 &emsp;&emsp;11.电气工程师的出差及工具包；</br>
                 &emsp;&emsp;12.电气工程师的海外就业；</br>
                 &emsp;&emsp;13.电气工程师的职业素养。</br>
-                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;请联系 business@kb727.com 预约资深专家，全部讲解需 90 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -247,7 +247,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>银行产品开发岗位面试辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;对于多数银行来说，当前主要考虑如何提高产品和服务的技术含量与附加值，避免金融服务同质化；如何进一步加大市场准入创新力度，争取基金托管、离岸金融、资产证券化、境外代客理财等市场准入资格，拓展经营范围和领域；如何开辟主动负债工具，探索发行金融债、可转债等筹资新品，优化资产、负债和资本结构；如何加快财富管理、衍生产品交易、电子银行产品、贸易融资等相关产品开发，通过新品开发吸引新、老客户；如何继续完善公金、个金VIP服务手段，提高客户忠诚度，这些是银行产品开发岗位需要关注的领域，请联系 banking@kb727.com 预约曾担任总行产品开发部门负责人的导师进行辅导。
+                &emsp;&emsp;对于多数银行来说，当前主要考虑如何提高产品和服务的技术含量与附加值，避免金融服务同质化；如何进一步加大市场准入创新力度，争取基金托管、离岸金融、资产证券化、境外代客理财等市场准入资格，拓展经营范围和领域；如何开辟主动负债工具，探索发行金融债、可转债等筹资新品，优化资产、负债和资本结构；如何加快财富管理、衍生产品交易、电子银行产品、贸易融资等相关产品开发，通过新品开发吸引新、老客户；如何继续完善公金、个金 VIP 服务手段，提高客户忠诚度，这些是银行产品开发岗位需要关注的领域，请联系 banking@kb727.com 预约曾担任总行产品开发部门负责人的导师进行辅导。
                 </p>
         </div>
     </div>
@@ -258,7 +258,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>金融科技与大数据职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;在金融与IT技术相融合的金融科技领域，随着大数据、数字孪生、流程挖掘等技术的进步，金融业的技术创新有可能进一步加速。请联系 banking@kb727.com 预约金融科技与大数据职业规划和岗位内推。
+                &emsp;&emsp;在金融与 IT 技术相融合的金融科技领域，随着大数据、数字孪生、流程挖掘等技术的进步，金融业的技术创新有可能进一步加速。请联系 banking@kb727.com 预约金融科技与大数据职业规划和岗位内推。
                 </p>
         </div>
     </div>
@@ -344,7 +344,7 @@
                 &emsp;&emsp;56.施工现场管理与项目知识管理提升；</br>
                 &emsp;&emsp;57.银行基建工程项目审计的方法应用。</br>
                 &emsp;&emsp;<b>课程讲师：</b>授课老师曾担任银行基建部门负责人，具有丰富的银行营业网点与重要基础设施建设项目全过程管理经验，其授课善于理清实务中重点、难点、疑点、焦点等专业共性问题的机理和深层原因，帮助学员拓展解决问题的视野和思路，实质性地提高专业素养和能力。</br>
-                &emsp;&emsp;<b>课程预约：</b>请联系 banking@kb727.com 预约资深专家，全部讲解需120分钟，回答和交流全部问题。
+                &emsp;&emsp;<b>课程预约：</b>请联系 banking@kb727.com 预约资深专家，全部讲解需 120 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -384,7 +384,7 @@
                 &emsp;&emsp;20、档案电子化处理；</br>
                 &emsp;&emsp;21、财务账目；</br>
                 &emsp;&emsp;22、为尊者讳，为逝者讳。</br>
-                &emsp;&emsp;本课程适合史志初学者或相关岗位求职面试辅导，请联系 historical@kb727.com 预约资深专家，全部讲解需90分钟，回答和交流全部问题。
+                &emsp;&emsp;本课程适合史志初学者或相关岗位求职面试辅导，请联系 historical@kb727.com 预约资深专家，全部讲解需 90 分钟，回答和交流全部问题。
                 </p>
         </div>
     </div>
@@ -395,7 +395,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>中国古典文献收藏与古籍整理辅导</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;请联系 historical@kb727.com 预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于1911年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。本课程适合古籍收藏者或相关岗位求职面试辅导。
+                &emsp;&emsp;请联系 historical@kb727.com 预约中国古典文献学研究者，辅导古籍收藏与整理实务，涵盖书写或印刷于 1911 年以前、反映中国古代文化、具有古典装订形式的各类书籍，包括简帛、纸写本、刻本、活字本、石印本等，进行辨伪、辑佚、审定、校勘、注释、标点、分段等整理工作。本课程适合古籍收藏者或相关岗位求职面试辅导。
                 </p>
         </div>
     </div>
@@ -481,9 +481,9 @@
 
     <div id="Rewards-1" class="Rewards">
         <div class="container">
-                <h3 style="text-align: left"><b>YONEX Fiore女士高尔夫球杆</b></h3>
+                <h3 style="text-align: left"><b>YONEX Fiore 女士高尔夫球杆</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;市面上最轻的YONEX Fiore 女士高尔夫套杆，性价比天花板，日系轻弹好打，容错好，颜值高，就问这颜值你爱💖了吗？#高尔夫装备 #高尔夫球杆 #素颜女神</br></br>
+                &emsp;&emsp;市面上最轻的 YONEX Fiore 女士高尔夫套杆，性价比天花板，日系轻弹好打，容错好，颜值高，就问这颜值你爱💖了吗？#高尔夫装备 #高尔夫球杆 #素颜女神</br></br>
                 <img src="attachments/YONEX-Fiore.jpg" alt="YONEX Fiore女士高尔夫球杆" width="100%">
                 </p>
         </div>
@@ -507,7 +507,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;佳能600D单反相机，18-55镜头，原价：4599元。</br>
+                &emsp;&emsp;佳能 600D 单反相机，18-55 镜头，原价：4599元。</br>
                 &emsp;&emsp;官网信息：https://www.canon.com.cn/product/600d/</br></br>
                 <img src="attachments/CANON-EOS-600D-18-55.jpg" alt="Canon EOS 600D单反相机" width="100%">
                 </p>
@@ -520,7 +520,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>Epson平板式扫描仪</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;产品类型：A4平板式扫描仪</br>
+                &emsp;&emsp;产品类型：A4 平板式扫描仪</br>
                 &emsp;&emsp;产品型号：Epson Perfection V39</br>
                 &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色 A4 300dpi 9.9 秒/页。</br>
                 &emsp;&emsp;官网介绍：https://www.epson.com.cn/products/scanners/206/V39/</br></br>
@@ -536,7 +536,7 @@
                 <h3 style="text-align: left"><b>广州版《天龙八部》全五册</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;这个版本基本上是买不到了，值得收藏！</br>
-                &emsp;&emsp;《天龙八部》是作家金庸笔下魁宏复杂的一部武侠小说作品。创作初衷以佛教的神话生物象征，谱写8个主角，各自成章最后交织为一。连载时逐渐发展成多线叙事、伏笔绵密的群像连续剧，以大理段氏、姑苏慕容、萧峯身世为核心，前后达30年的家仇国恨的史诗悲剧。本书横跨地域广阔，牵涉民族与个人的深刻情感矛盾。陈世骧评价说：“然实一悲天悯人之作也......读《天龙八部》必须不流读，牢记住楔子一章，就可见冤孽与超度都发挥尽致。书中的人物情节，可谓无人不冤，有情皆孽，要写到尽致非把常人常情都写成离奇不可；书中的世界是朗朗世界到处藏着魍魉和鬼蜮，随时予以惊奇的揭发与讽刺，要供出这样一个可怜芸芸众生的世界，如何能不教结构松散？这样的人物情节和世界，背后笼罩着佛法的无边大超脱，时而透露出来。而在每逢动人处，我们会感到希腊悲剧理论中所谓恐怖与怜悯。”</br></br>
+                &emsp;&emsp;《天龙八部》是作家金庸笔下魁宏复杂的一部武侠小说作品。创作初衷以佛教的神话生物象征，谱写 8 个主角，各自成章最后交织为一。连载时逐渐发展成多线叙事、伏笔绵密的群像连续剧，以大理段氏、姑苏慕容、萧峯身世为核心，前后达 30 年的家仇国恨的史诗悲剧。本书横跨地域广阔，牵涉民族与个人的深刻情感矛盾。陈世骧评价说：“然实一悲天悯人之作也......读《天龙八部》必须不流读，牢记住楔子一章，就可见冤孽与超度都发挥尽致。书中的人物情节，可谓无人不冤，有情皆孽，要写到尽致非把常人常情都写成离奇不可；书中的世界是朗朗世界到处藏着魍魉和鬼蜮，随时予以惊奇的揭发与讽刺，要供出这样一个可怜芸芸众生的世界，如何能不教结构松散？这样的人物情节和世界，背后笼罩着佛法的无边大超脱，时而透露出来。而在每逢动人处，我们会感到希腊悲剧理论中所谓恐怖与怜悯。”</br></br>
                 <img src="attachments/Heaven-Dragon-The-Eighth.jpg" alt="广州版《天龙八部》全五册" width="100%">
                 </p>
         </div>
@@ -548,11 +548,11 @@
         <div class="container">
                 <h3 style="text-align: left"><b>《现代成名学》上下册</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp; #说说你最想以什么样的方式出名</br>
-                &emsp;&emsp; #人不怕出名猪不怕壮</br>
-                &emsp;&emsp; #造出名场面</br>
-                &emsp;&emsp; #出名要趁早</br>
-                &emsp;&emsp; #公众舆论</br></br>
+                &emsp;&emsp; # 说说你最想以什么样的方式出名</br>
+                &emsp;&emsp; # 人不怕出名猪不怕壮</br>
+                &emsp;&emsp; # 造出名场面</br>
+                &emsp;&emsp; # 出名要趁早</br>
+                &emsp;&emsp; # 公众舆论</br></br>
                 <img src="attachments/fame.jpg" alt="《现代成名学》上下册" width="100%">
                 </p>
         </div>
