--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
         <div class="container">
                 <h3 style="text-align: left"><b>信息技术与互联网职业规划和岗位内推</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;☑️ 技术岗、产品岗、运营岗</br>
-                &emsp;&emsp;☑️ 市场岗、销售岗、职能岗</br></br>
+                &emsp;&emsp;技术岗、产品岗、运营岗</br>
+                &emsp;&emsp;市场岗、销售岗、职能岗</br></br>
                 &emsp;&emsp;请联系 banking@kb727.com 预约信息技术与互联网职业规划和岗位内推。
                 </p>
         </div>
@@ -507,8 +507,7 @@
         <div class="container">
                 <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;佳能 600D 单反相机，18-55 镜头，原价：4599元。</br>
-                &emsp;&emsp;官网信息：https://www.canon.com.cn/product/600d/</br></br>
+                &emsp;&emsp;佳能 600D 单反相机，18-55 镜头，原价：4599元。官网信息：canon.com.cn/product/600d</br></br>
                 <img src="attachments/CANON-EOS-600D-18-55.jpg" alt="Canon EOS 600D单反相机" width="100%">
                 </p>
         </div>
@@ -565,7 +564,7 @@
                 <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
                 <p class="lead" style="text-align: left">
                 &emsp;&emsp;永久使用标准版授权，无需续费。</br>
-                &emsp;&emsp;官网: http​‌‌s://www.s-cms.cn</br></br>
+                &emsp;&emsp;官网: s-cms.cn</br></br>
                 <img src="attachments/cms.png" alt="管理信息系统永久商业授权" width="100%">
                 </p>
         </div>
