--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
             <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
+            <hr>
+            <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727® is the leading global certification scheme in the field of socially responsible tutorials. As of October 2024, KB727® has administered more than 200 interviews and issued 23 certifications in Shanghai, Seattle and Buffalo.</p>
         </ul>
     </div>
     <!-- /Side Menu -->
@@ -82,7 +84,7 @@
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。金钱不应该决定接受教育的机会。我们希望生活在一个每个人都能获得良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。
+                &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727® 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
@@ -601,8 +603,8 @@
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
                     </ul>
-                    <a href="attachments/One-Page-Overview-in-English.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">One-Page Overview</a></br></br>
-                    <a href="attachments/One-Page-Overview-in-Chinese.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">单页概览</a>
+                    <a href="attachments/One-Pager-in-English.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');"><b>One-Pager</b></a></br></br>
+                    <a href="attachments/One-Pager-in-Chinese.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');"><b>简介</b></a>
                 <div class="top-scroll">
                 <a href="#top" title="Back to top" alt="Back to top"><i class="fa fa-angle-double-up scroll fa-4x"></i></a>
                 </div>
