--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                 </br></br>
                 &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727® 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。
                 </br></br>
+                &emsp;&emsp;KB727® 是倡导私教课程社会责任领域领先的全球认证计划。截至 2024 年 10 月，KB727® 已在上海、西雅图和布法罗进行了 200 多次访谈，并颁发了 15 项认证。
+                </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
                 </p>
