--- a/index.html
+++ b/index.html
@@ -80,13 +80,11 @@
             <div class="col-md-12 text-center">
                 <h2 style="text-align: left"><b>简介</b></h2>
                 <p class="lead" style="text-align: left">
-                &emsp;&emsp;您好，我是来自中国上海的 Min，我创建的这个网站，来源于我在美国西雅图、布法罗的 ESOL 教学实践，期间我接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
+                &emsp;&emsp;KB727® 是倡导私教课程社会责任领域领先的全球认证计划。截至 2024 年 10 月，KB727® 已在上海、西雅图和布法罗进行了 200 多次访谈，并颁发了 15 项认证。在访谈中，我们接触到很多高品质的私教课程、一对一的资深导师，从 K-12 阅读理解、基础数学、微积分、化学到 TOEFL-IBT 考试再到游泳、健身，私教课程已经超出了学生学业学科的范围：您还可以在专业考试和论文、写简历或求职面试等多方面获得资深导师的帮助。许多导师在其擅长的学科领域拥有高级学位和专业经验，拥有如此多的脑力，谁会不愿意让私教课程为自己的发展和前途接力呢？
                 </br></br>
                 &emsp;&emsp;然而在现实情况下，低收入家庭和经济困难者可能就没有机会。金钱不应该决定接受教育的机会。我们希望生活在一个每个人都能获得良好教育的世界——而不仅仅是那些家庭负担得起的人。
                 </br></br>
-                &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727® 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。
-                </br></br>
-                &emsp;&emsp;KB727® 是倡导私教课程社会责任领域领先的全球认证计划。截至 2024 年 10 月，KB727® 已在上海、西雅图和布法罗进行了 200 多次访谈，并颁发了 15 项认证。
+                &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727® 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。       
                 </br></br>
                 &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
