--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
-            <li><a href="#Rewards" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
+            <li><a href="attachments\Rewards.pdf" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
             <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727® is the leading global certification scheme in the field of socially responsible tutorials. As of October 2024, KB727® has administered more than 200 interviews and issued 15 certifications in Shanghai, Seattle and Buffalo.</p>
@@ -63,7 +63,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="#Rewards" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="attachments\Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
@@ -88,7 +88,7 @@
                 </br></br>
                 &emsp;&emsp;为低收入家庭和经济困难者提供免费辅导超过 6 个月的同一位导师将通过 KB727® 认证，获得奖励以及商业推广支持。认证文件和奖品交付将通过官网邮件确认。       
                 </br></br>
-                &emsp;&emsp;感谢媒体、机构、捐赠者对我们这项工作的关心和支持。
+                &emsp;&emsp;感谢导师、媒体、机构、捐赠者对我们这项工作的关心和支持。
                 </br></br>
                 </p>
             </div>
@@ -470,125 +470,7 @@
     </div>
     <!-- /Findoutmore -->
 
-    </br></br>
-
-    <!-- Rewards -->
-        <div id="Rewards" class="Rewards">
-            <div class="container text-center">
-                <h2><b>奖励物品及可售清单</b></h2>
-                <hr>
-                <p class="lead" style="text-align: left">&emsp;&emsp;以下所列收藏品来源于合作机构与捐赠者的贡献，用于为彰显社会责任的私教课程提供奖励，全部包邮送达。</p>
-            </div>
-        </div>
-
     </br>
-
-    <div id="Rewards-1" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>YONEX Fiore 女士高尔夫球杆</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;市面上最轻的 YONEX Fiore 女士高尔夫套杆，性价比天花板，日系轻弹好打，容错好，颜值高，就问这颜值你爱💖了吗？#高尔夫装备 #高尔夫球杆 #素颜女神</br></br>
-                <img src="attachments/YONEX-Fiore.jpg" alt="YONEX Fiore女士高尔夫球杆" width="100%">
-                </p>
-        </div>
-    </div>
- 
-    </br>
-
-    <div id="Rewards-2" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>段奕宏签名题字</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;铮铮铁骨，字如其人。“段奕宏以演技和实力演绎着每部戏中的角色，演绎着自己与众不同的星途，观众对他真面目的认识也因他演绎的角色而蒙上一层美丽而神秘的面纱。细看段奕宏的作品单，很难找到同类型的角色。无论角色，还是表达方式，不墨守成规都是他对自己的要求。观众惊异于他一人千面的演技：下一部片子和上一部片子里完全是两个人，甚至面相都不同。段奕宏精湛、细腻的演技经常得到圈内人士、观众的赞赏，但他从未骄纵过。段奕宏给人的感觉是淡定、宠辱不惊。”（《南方人物周刊》评）。</br></br>
-                <img src="attachments/DuanYihong.jpg" alt="段奕宏签名题字" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-3" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>Canon EOS 600D单反相机</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;佳能 600D 单反相机，18-55 镜头，原价：4599元。官网信息：canon.com.cn/product/600d</br></br>
-                <img src="attachments/CANON-EOS-600D-18-55.jpg" alt="Canon EOS 600D单反相机" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-4" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>Epson平板式扫描仪</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;产品类型：A4 平板式扫描仪</br>
-                &emsp;&emsp;产品型号：Epson Perfection V39</br>
-                &emsp;&emsp;产品简介：4800dpi 超高分辨率，USB 线直连供电，开机即扫；黑色机身，体积娇小，机身轻薄，时尚简洁，适合中小企业、SOHO、个人用户，用于处理纸质票据、老旧照片、手写文档、简报资料​‌‌，不占地方，经久耐用。官网可下载强大的影像数据处理软件，扫描盖板可拆卸，可立式摆放，释放更多空间，特别适合扫描书籍、文档、照片、证件，扫描速度为彩色 A4 300dpi 9.9 秒/页。</br>
-                &emsp;&emsp;官网介绍：https://www.epson.com.cn/products/scanners/206/V39/</br></br>
-                <img src="attachments/Epson-perfection-v39-scanner.jpg" alt="Epson平板式扫描仪" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-5" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>广州版《天龙八部》全五册</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;这个版本基本上是买不到了，值得收藏！</br>
-                &emsp;&emsp;《天龙八部》是作家金庸笔下魁宏复杂的一部武侠小说作品。创作初衷以佛教的神话生物象征，谱写 8 个主角，各自成章最后交织为一。连载时逐渐发展成多线叙事、伏笔绵密的群像连续剧，以大理段氏、姑苏慕容、萧峯身世为核心，前后达 30 年的家仇国恨的史诗悲剧。本书横跨地域广阔，牵涉民族与个人的深刻情感矛盾。陈世骧评价说：“然实一悲天悯人之作也......读《天龙八部》必须不流读，牢记住楔子一章，就可见冤孽与超度都发挥尽致。书中的人物情节，可谓无人不冤，有情皆孽，要写到尽致非把常人常情都写成离奇不可；书中的世界是朗朗世界到处藏着魍魉和鬼蜮，随时予以惊奇的揭发与讽刺，要供出这样一个可怜芸芸众生的世界，如何能不教结构松散？这样的人物情节和世界，背后笼罩着佛法的无边大超脱，时而透露出来。而在每逢动人处，我们会感到希腊悲剧理论中所谓恐怖与怜悯。”</br></br>
-                <img src="attachments/Heaven-Dragon-The-Eighth.jpg" alt="广州版《天龙八部》全五册" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-6" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>《现代成名学》上下册</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp; # 说说你最想以什么样的方式出名</br>
-                &emsp;&emsp; # 人不怕出名猪不怕壮</br>
-                &emsp;&emsp; # 造出名场面</br>
-                &emsp;&emsp; # 出名要趁早</br>
-                &emsp;&emsp; # 公众舆论</br></br>
-                <img src="attachments/fame.jpg" alt="《现代成名学》上下册" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-7" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>管理信息系统永久商业授权</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;永久使用标准版授权，无需续费。</br>
-                &emsp;&emsp;官网: s-cms.cn</br></br>
-                <img src="attachments/cms.png" alt="管理信息系统永久商业授权" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <div id="Rewards-8" class="Rewards">
-        <div class="container">
-                <h3 style="text-align: left"><b>各国硬币收藏夹</b></h3>
-                <p class="lead" style="text-align: left">
-                &emsp;&emsp;内含美元、日元、韩元、泰铢、菲律宾披索、阿联酋迪拉姆等各国硬币。</br></br>
-                <img src="attachments/coins.jpg" alt="硬币：韩元、菲律宾披索、阿联酋迪拉姆" width="100%">
-                </p>
-        </div>
-    </div>
-
-    </br>
-
-    <hr>
 
     <!-- Footer -->
     <footer>
@@ -599,14 +481,12 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="#Rewards" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="attachments\Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
                         <li><i class="fa fa-map-marker"></i> Shanghai ● Seattle ● Buffalo</li>
                     </ul>
-                    <a href="attachments/One-Pager-in-English.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');"><b>One-Pager</b></a></br></br>
-                    <a href="attachments/One-Pager-in-Chinese.png" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');"><b>简介</b></a>
                 <div class="top-scroll">
                 <a href="#top" title="Back to top" alt="Back to top"><i class="fa fa-angle-double-up scroll fa-4x"></i></a>
                 </div>
