--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#about" onClick="ga('send', '_trackEvent', 'Navbar', 'About');">关于我们</a></li>
             <li><a href="#services" onClick="ga('send', '_trackEvent', 'Navbar', 'services');">认证项目</a></li>
             <li><a href="#portfolio" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');">合作伙伴</a></li>
-            <li><a href="attachments\Rewards.pdf" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
+            <li><a href="attachments\Rewards.docx" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');">奖励物品</a></li>
             <li><a href="mailto:webmaster@kb727.com" onClick="ga('send', '_trackEvent', 'Navbar', 'Contact');">联系我们</a></li>
             <hr>
             <p class="small" style="text-align: left; margin: -5px 20px 0px 20px; color: #F3EEEE" ;>KB727® is the leading global certification scheme in the field of socially responsible tutorials. As of October 2024, KB727® has administered more than 200 interviews and issued 15 certifications in Shanghai, Seattle and Buffalo.</p>
@@ -63,7 +63,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="attachments\Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="attachments\Rewards.docx" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
         </div>
@@ -481,7 +481,7 @@
                 <li><a href="#about" title="关于我们" alt="关于我们" onClick="ga('send', '_trackEvent', 'Navbar', 'About');"><i class="fa-regular fa-address-card fa-3x"></i></a></li>
                 <li><a href="#services" title="认证项目" alt="认证项目" onClick="ga('send', '_trackEvent', 'Navbar', 'services');"><i class="fa-solid fa-chalkboard-user fa-3x"></i></a></li>
                 <li><a href="#portfolio" title="合作伙伴" alt="合作伙伴" onClick="ga('send', '_trackEvent', 'Navbar', 'Portfolio');"><i class="fa-solid fa-7 fa-3x"></i></a></li>
-                <li><a href="attachments\Rewards.pdf" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
+                <li><a href="attachments\Rewards.docx" title="奖励物品" alt="奖励物品" onClick="ga('send', '_trackEvent', 'Navbar', 'Rewards');"><i class="fa-brands fa-cotton-bureau fa-3x"></i></a></li>
                 <li><a href="mailto:webmaster@kb727.com" title="联系我们" alt="联系我们" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a></li>
             </ul>
                     <ul class="list-unstyled size-m spaced">
