--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                 <h2><b>Links of some institutions</b></h2>
                 <ul class="list-inline spaced">
-                   <li><a href="attachments/taling-copywriting.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">Taling Copywriting</a></li>
+                   <li><a href="attachments/taling.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">Taling Copywriting</a></li>
                    <li><a href="attachments/Funds-Available.txt" target="_blank" class="btn btn-lg btn-primary resume toSlideDown" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume bottom');">Funds Available</a></li>
                 </ul>
                 <hr>
@@ -146,7 +146,7 @@ color:#333333;
 text-decoration:none;
 }
 </style>
-            <p>Copyright &copy; 2015-2024, KB727.COM all rights reserved. Please refer to the <a href="attachments/privacy-statement-en.txt">privacy statement</a>. Unauthorized use of the content of this website will face legal action.</p>
+            <p>Copyright &copy; 2024, KB727.COM all rights reserved. Please refer to the <a href="attachments/privacy-statement-en.txt">privacy statement</a>. Unauthorized use of the content of this website will face legal action.</p>
                 </div>
             </div>
         </div>
